[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "carm"
version = "0.0.20250815"
authors = [
    {name = "Yong Zhao", email = "zhaoyong11933@cvte.com"},
]
description = "Python interface for cvte arm."
requires-python = ">=3.6"
dependencies = [
    "websocket-client",
]

[project.scripts]
carm = "carm:main"
carm_ros2 = "carm:ros2_main"

[tool.setuptools]
packages = ["carm"]
package-dir = {"" = "src"}  # If using src layout, otherwise remove

[tool.setuptools.package-data]
carm = [
    "__init__.py",
    "carm.py",
]

[tool.setuptools.zip-safe]
zip-safe = true
